static/css/base.css
/* General Styling */

html {
    height: 100%;
}

body {
    height: calc(100vh - 20vh);
    font-family: 'Roboto'; /* Taken from Google Fonts to replicate as close to the font used by The Foo Fighters - Futura */
    background: url('/media/main_image_2_40.webp') no-repeat center fixed;
    background-size: cover;
}

h1.logo-font {
    line-height: 85%;
    text-transform: uppercase;
}

.text-black {
    color: #000 !important;
}

.border-black {
    border: .1rem solid black !important;
}

.main-logo-link {
    width: fit-content;
}



/* Buttons */

.shop-now-button {
    background: black;
    color: white;
    min-width: 260px;
}

.btn-black {
    background: black;
    color: white;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: #222;
    color: white;
}

.nav-link-text {
    font-size: 1.5rem;
}


.drum {
    width: calc(.35 * 90vh);
    height: calc(.35 * 90vh);
    background: url('/media/kick_drum.webp') no-repeat center center;
    background-size: contain;
    position: fixed;
    bottom: 5vh;
    right: 8vw;
    padding: 0;
}




/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

/* Nav */


.dropdown-menu {
    color: black!important;
    background-color: rgba(255, 255, 255, 0.6);
}

.dropdown-item {
    font-size: 1.2rem;
}

.nav-style {
    background-color: rgba(255, 255, 255, 0.6);
}


/* Template page styling */

.overlay {
    height: 100vh;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    z-index: -1;
}

.product-container-outter {
    display: block;
    position: fixed;
    top: 35vh;
    width: auto;
    z-index: 1000;
    height: 100%;
}

.product-container {
    overflow-y: scroll;
    height: 100%;
    padding-bottom: 40vh;
}




/* Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 20vh;
    }

}

@media (max-width: 992px) {

    h1.logo-font {
        font-size: 1.5rem;
    }

    .header-container {
        padding-top: 10vh;
    }
   

    .nav-link-text {
        font-size: .7rem;
        padding-left: 0.1rem;
        padding-right: 0.1rem;
        margin-left: 0.1rem;
        margin-right: 0.1rem;
    }

    .dropdown-item {
        font-size: .8rem;
    }

    a.logo-font {
        font-size: 1rem;
    }

    
    .navbar-toggler {
        padding: .3rem .3rem;
        font-size: .8rem;
    }

    .product-container-outter {
        top: 25vh;
}

}

